vlib/v/parser/tests/duplicate_field_embed_err.vv
import v.vmod

struct ModFileAndFolder {
	name int = 5
}
struct Bar {
	ModFileAndFolder
	vmod.ModFileAndFolder
}
